[gd_scene load_steps=3 format=3 uid="uid://dkx3l5m02nde"]

[ext_resource type="Script" path="res://ui/game/player_inventory/player_inventory.gd" id="1_1is7l"]
[ext_resource type="PackedScene" uid="uid://dnqtim1d6vcjw" path="res://ui/game/player_inventory/inventory_interface.tscn" id="2_wlbkx"]

[node name="PlayerInventory" type="Window"]
title = "PlayerInventory_Inventory"
initial_position = 2
size = Vector2i(800, 450)
visible = false
script = ExtResource("1_1is7l")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="InventoryInterface" parent="HSplitContainer/PanelContainer/ScrollContainer" instance=ExtResource("2_wlbkx")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="VBoxContainer" parent="HSplitContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="request_swap" from="HSplitContainer/PanelContainer/ScrollContainer/InventoryInterface" to="." method="_on_inventory_interface_request_swap"]
